wip: added temp solution for books and members